@@ -45,6 +45,10 @@ with Matlab. It may also be used as a batch-oriented language.</p>
 <h2>Current News</h2>
 
 <dl>
+<dt>March 27, 2007</dt>
+<dd>Version 2.9.10 is now available for ftp.
+<a href="https://www.cae.wisc.edu/pipermail/octave-maintainers/2007-March/002372.html"
+class="mailthread">[Mailing List Thread]</a></dd>
 <dt>March 1, 2007</dt>
 <dd>Thanks to Bob Weigel and Nabble, it is now possible to
 <a href="http://www.nabble.com/Octave-f1895.html">search</a> the contents of
